[gd_scene load_steps=11 format=3 uid="uid://p8gbldawef5v"]

[ext_resource type="Script" path="res://scenes/BFS2.gd" id="1_xkce5"]
[ext_resource type="PackedScene" uid="uid://dbjnecgl87bvo" path="res://scenes/snake_segment.tscn" id="2_wfesi"]
[ext_resource type="Texture2D" uid="uid://ce7sma4dnqqke" path="res://sprites/bg.png" id="3_0vxus"]
[ext_resource type="Texture2D" uid="uid://7wwa1ye03iga" path="res://sprites/num1.png" id="4_cxwep"]
[ext_resource type="Texture2D" uid="uid://bmefb25w3nvp6" path="res://sprites/num2.png" id="5_34gkn"]
[ext_resource type="Texture2D" uid="uid://ccfuigqym1bgm" path="res://sprites/num3.png" id="6_p2doq"]
[ext_resource type="Texture2D" uid="uid://cu203f6ixgj5t" path="res://sprites/num4.png" id="7_3vx8y"]
[ext_resource type="Texture2D" uid="uid://rhp0o0vb730s" path="res://sprites/num5.png" id="8_w6khy"]
[ext_resource type="Texture2D" uid="uid://cbcc1feinplq3" path="res://sprites/num6.png" id="9_kfuc4"]
[ext_resource type="Texture2D" uid="uid://dox5wgrth2s4k" path="res://sprites/num7.png" id="10_hjkqb"]

[node name="BFS2" type="Node"]
script = ExtResource("1_xkce5")
snake_scene = ExtResource("2_wfesi")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(500, 500)
texture = ExtResource("3_0vxus")

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="num1" type="Sprite2D" parent="."]
texture = ExtResource("4_cxwep")
centered = false

[node name="num2" type="Sprite2D" parent="."]
texture = ExtResource("5_34gkn")
centered = false

[node name="num3" type="Sprite2D" parent="."]
texture = ExtResource("6_p2doq")
centered = false

[node name="num4" type="Sprite2D" parent="."]
texture = ExtResource("7_3vx8y")
centered = false

[node name="num5" type="Sprite2D" parent="."]
texture = ExtResource("8_w6khy")
centered = false

[node name="num6" type="Sprite2D" parent="."]
texture = ExtResource("9_kfuc4")
centered = false

[node name="num7" type="Sprite2D" parent="."]
texture = ExtResource("10_hjkqb")
centered = false

[node name="Instructions" type="RichTextLabel" parent="."]
offset_left = 245.0
offset_top = 122.0
offset_right = 777.0
offset_bottom = 176.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 32
text = "Complete A Breadth-First Search!"

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
